WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205699
Align XPathEvaluator.createNSResolver() / XPathResult.snapshotItem() with the specification
https://bugs.webkit.org/show_bug.cgi?id=205699
Summary
Align XPathEvaluator.createNSResolver() / XPathResult.snapshotItem() with the...
Chris Dumez
Reported
2020-01-02 15:46:35 PST
Align XPathEvaluator.createNSResolver() / XPathResult.snapshotItem() with the specification and other browsers. In particular, their parameter should not be optional.
Attachments
Patch
(13.74 KB, patch)
2020-01-02 15:49 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.77 KB, patch)
2020-01-02 16:48 PST
,
Chris Dumez
achristensen
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-01-02 15:49:47 PST
Created
attachment 386642
[details]
Patch
Chris Dumez
Comment 2
2020-01-02 16:48:27 PST
Created
attachment 386647
[details]
Patch
EWS Watchlist
Comment 3
2020-01-02 16:49:14 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 4
2020-01-02 18:53:14 PST
Comment on
attachment 386647
[details]
Patch Rejecting
attachment 386647
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 386647, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=386647&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=205699
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 386647 from
bug 205699
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=386647
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/imported/w3c/ChangeLog M LayoutTests/imported/w3c/web-platform-tests/dom/idlharness.window-expected.txt M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 148a62757011498dec09eed65fb925add1e38d23 and refs/remotes/origin/master differ, using rebase: :040000 040000 01097f43b7b4a5d53f88afb25d40c6c84e386074 08fb29d6be41ea5db14a4f5b6a94bf9259114c69 M LayoutTests :040000 040000 40b8ac37e0b3d524e157d6586d6cae933c1c731f a1b0e40332200b3dad7c924ad35adeccd3fb0c55 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/imported/w3c/ChangeLog M LayoutTests/imported/w3c/web-platform-tests/dom/idlharness.window-expected.txt M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: 148a62757011498dec09eed65fb925add1e38d23 and refs/remotes/origin/master differ, using rebase: :040000 040000 01097f43b7b4a5d53f88afb25d40c6c84e386074 08fb29d6be41ea5db14a4f5b6a94bf9259114c69 M LayoutTests :040000 040000 40b8ac37e0b3d524e157d6586d6cae933c1c731f a1b0e40332200b3dad7c924ad35adeccd3fb0c55 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource From
https://git.webkit.org/git/WebKit
22a9ed66c88..4642e1144c0 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 253986 = 22a9ed66c888918a8ce48ac0ec10d46040dec0c6
r253987
= 4642e1144c05c0c1d3d80d7c9f0ce605a4b0edb6 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
https://webkit-queues.webkit.org/results/13298353
Chris Dumez
Comment 5
2020-01-03 08:58:23 PST
Committed
r254001
: <
https://trac.webkit.org/changeset/254001
>
Radar WebKit Bug Importer
Comment 6
2020-01-03 08:59:16 PST
<
rdar://problem/58298800
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug