Align XPathEvaluator.createNSResolver() / XPathResult.snapshotItem() with the specification https://bugs.webkit.org/show_bug.cgi?id=205699

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaselined existing test now that more checks are passing.

* web-platform-tests/dom/idlharness.window-expected.txt:

Source/WebCore:

Align XPathEvaluator.createNSResolver() / XPathResult.snapshotItem() with the specification and
other browsers (tested Chrome 79 and Firefox 71). In particular, their parameter should not be
optional (or nullable).

No new tests, rebaselined existing test.

* dom/Document.cpp:
(WebCore::Document::createNSResolver):
* dom/Document.h:
* dom/Document.idl:
* xml/NativeXPathNSResolver.cpp:
(WebCore::NativeXPathNSResolver::NativeXPathNSResolver):
(WebCore::NativeXPathNSResolver::lookupNamespaceURI):
* xml/NativeXPathNSResolver.h:
(WebCore::NativeXPathNSResolver::create):
* xml/XPathEvaluator.cpp:
(WebCore::XPathEvaluator::createNSResolver):
* xml/XPathEvaluator.h:
* xml/XPathEvaluator.idl:
* xml/XPathResult.idl:

Source/WebKitLegacy/mac:

* DOM/DOMDocument.mm:
(-[DOMDocument createNSResolver:]):

Canonical link: https://commits.webkit.org/218877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254001 268f45cc-cd09-0410-ab3c-d52691b4dbfc